src/test/ui/resolve/levenshtein.stderr
error[E0412]: cannot find type `esize` in this scope
  --> $DIR/levenshtein.rs:15:11
   |
15 | fn foo(c: esize) {} // Misspelled primitive type name.
   |           ^^^^^
   |
help: did you mean
   | fn foo(c: isize) {} // Misspelled primitive type name.

error[E0412]: cannot find type `Baz` in this scope
  --> $DIR/levenshtein.rs:19:10
   |
19 | type A = Baz; // Misspelled type name.
   |          ^^^
   |
help: did you mean
   | type A = Bar; // Misspelled type name.

error[E0412]: cannot find type `Opiton` in this scope
  --> $DIR/levenshtein.rs:20:10
   |
20 | type B = Opiton<u8>; // Misspelled type name from the prelude.
   |          ^^^^^^^^^^
   |
help: did you mean
   | type B = Option; // Misspelled type name from the prelude.

error[E0412]: cannot find type `Baz` in this scope
  --> $DIR/levenshtein.rs:23:14
   |
23 |     type A = Baz; // No suggestion here, Bar is not visible
   |              ^^^ not found in this scope

error[E0425]: cannot find value `MAXITEM` in this scope
  --> $DIR/levenshtein.rs:30:20
   |
30 |     let v = [0u32; MAXITEM]; // Misspelled constant name.
   |                    ^^^^^^^
   |
help: did you mean
   |     let v = [0u32; MAX_ITEM]; // Misspelled constant name.

error[E0425]: cannot find function `foobar` in this scope
  --> $DIR/levenshtein.rs:31:5
   |
31 |     foobar(); // Misspelled function name.
   |     ^^^^^^
   |
help: did you mean
   |     foo_bar(); // Misspelled function name.

error[E0412]: cannot find type `first` in module `m`
  --> $DIR/levenshtein.rs:32:12
   |
32 |     let b: m::first = m::second; // Misspelled item in module.
   |            ^^^^^^^^
   |
help: did you mean
   |     let b: m::First = m::second; // Misspelled item in module.

error[E0425]: cannot find value `second` in module `m`
  --> $DIR/levenshtein.rs:32:23
   |
32 |     let b: m::first = m::second; // Misspelled item in module.
   |                       ^^^^^^^^^
   |
help: did you mean
   |     let b: m::first = m::Second; // Misspelled item in module.

error[E0080]: constant evaluation error
  --> $DIR/levenshtein.rs:30:20
   |
30 |     let v = [0u32; MAXITEM]; // Misspelled constant name.
   |                    ^^^^^^^ unresolved path in constant expression

error: aborting due to previous error

